--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://apply.workable.com/collectai/j/11C51D6758/'>Software Engineer Frontend (f/m/d) - collect Artificial Intelligence GmbH</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/bluecore/3ffe119b-0318-49e5-a2d3-237563aa3357'>Bluecore - Software Engineer Intern</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -51,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oJHX9fwg&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nU1MqMwo'>Schneider Electric NAM Careers - Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oJHX9fwg&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nU1MqMwo'>Schneider Electric NAM Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -119,7 +123,7 @@
 <p><span class="badge badge-light">Dallas, Texas  Dallas, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/324fa271-3bc4-4c78-9fb8-f58a93fb90c9'>Couchbase - Software Engineer - GO</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/324fa271-3bc4-4c78-9fb8-f58a93fb90c9'>Couchbase - Software Engineer - GO</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -189,11 +193,11 @@
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o8MUafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nc6zqMwy'>ServiceNow Careers - Staff UI/UX Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o8MUafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nc6zqMwy'>ServiceNow Careers - Staff UI/UX Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Conga1/743999698651424-principal-software-engineer'>Conga Principal Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Conga1/743999698651424-principal-software-engineer'>Conga Principal Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Broomfield, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -201,7 +205,7 @@
 <p><span class="badge badge-light">Pompano Beach, FL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -209,7 +213,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cision-canada/job/o2lg9fww'>Cision Canada Careers - Senior Software Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cision-canada/job/o2lg9fww'>Cision Canada Careers - Senior Software Developer</a></h5> 
 <p><span class="badge badge-light">Canada Canada Ottawa, Ontario</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -217,7 +221,7 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -233,7 +237,7 @@
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -241,7 +245,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698644894-senior-software-engineer'>SG Digital Senior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698644894-senior-software-engineer'>SG Digital Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -261,7 +265,7 @@
 <p><span class="badge badge-light">New York  New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/extrahop-networks-inc/job/osIpbfwu'>ExtraHop Networks, Inc. Careers - Software Developer, Web</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/extrahop-networks-inc/job/osIpbfwu'>ExtraHop Networks, Inc. Careers - Software Developer, Web</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -369,7 +373,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=orQ79fwh&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n1nmqMwr'>Quotient Technology Inc. Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=orQ79fwh&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n1nmqMwr'>Quotient Technology Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -393,7 +397,7 @@
 <p><span class="badge badge-light">Vietnam  Vietnam</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cardinalcommerce/jobs/1818086'>Job Application for Lead Software Developer at CardinalCommerce</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardinalcommerce/jobs/1818086'>Job Application for Lead Software Developer at CardinalCommerce</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -421,7 +425,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concurrency/c8df7766-ec46-43cd-b8f1-ab1e99f9cad1'>Concurrency - Senior Software Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/concurrency/c8df7766-ec46-43cd-b8f1-ab1e99f9cad1'>Concurrency - Senior Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -435,10 +439,6 @@
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nSblqMw5'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oKJpafwM&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nsBkqMw4'>NICE Careers - Sr.Full Stack Developer / Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 
